# websockify

./: .gitignore  .travis.yml  CHANGES.txt  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  auth.py  pyproject.toml  rebind.c  run  setup.py  test-requirements.txt  tox.ini  vnc.html  vnc_auto.html  websocket.py  websockify  websockify.spec  wsproxy.c  wstelnet.html
Windows/: Windows Service Readme.txt
debian/: changelog  control  copyright  rules
docker/: Dockerfile  docker-entrypoint.sh
docs/: TODO  latency_results.txt  release.txt  websockify.1
include/: canvas.js  default_controls.js  rfb.js  util.js  vnc.js  websock.js  webutil.js  wstelnet.js
other/: .gitignore  Makefile  README.md  base64.c  kumina.c  md5.h  package.json  project.clj  sha-1.c  websocket.c  websocket.h  websocket.rb  websockify.c  websockify.clj  websockify.js  websockify.rb
tests/: echo.html  echo.py  echo.rb  echo_client.py  encoding.py  include  latency.html  latency.py  load.html  load.py  plain_echo.html  test_auth_plugins.htpasswd  test_auth_plugins.py  test_token_plugins.py  test_websocket.py  test_websocketproxy.py  test_websocketserver.py  test_websockifyserver.py  tox.ini  utf8-list.py  wsecho.py  wstest.py
websockify/: __init__.py  __main__.py  auth_plugins.py  conn_plugins.py  django_auth_plugins.py  encode_url.py  group.py  log.py  plugins.py  proxy.py  pyDes.py  sysloghandler.py  token_plugins.py  traffic_plugins.py  websocket.py  websocketproxy.py  websocketserver.py  websockify  websockifyserver.py
ws_vc2010/: ws_vc2010.sln  ws_vc2010.vcxproj  (+1 more)
(+14 files in other folders)
